test/files/neg/implicit-override.check
implicit-override.scala:7: error: overriding method foo in trait C of type (i: Int)Unit;
 method foo is declared implicit but overides a non-implicit method
  def foo(implicit i: Int): Unit
      ^
implicit-override.scala:8: error: overriding method bar in trait C of type (implicit i: Int)Unit;
 method bar is not declared implicit but overides a implicit method
  def bar(i: Int): Unit
      ^
two errors found
